Tue Mar 24 01:07:14 1998  Tom Tromey  <tromey@cygnus.com>

	* stock_demo.c (message_dlg): New function to test
	gnome-messagebox.  (This could be moved elsewhere; it is just a
	hack.)

	* gnome-propertybox.c (gnome_property_box_new): Buttons now kept
	in a button box.
	* gnome-messagebox.c (gnome_message_box_new): Buttons now kept in
	a button box.
	(GNOME_PAD): Define.

Sun Mar 23 02:24:44 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c: fixed some segfaults when clicking on empty
	accelerators.

Sun Mar 23 00:09:49 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c: Added config dialog for menu accelerators. This might
	not be the proper place, but I didn't know where else to put it.

	* stock_demo.c: Choosing preferences opens the accel config dlg.

Sun Mar 22 19:16:58 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.[ch]: Added gnome_stock_menu_accel_parse.

	* gnome-stock.c: Added parsing of default accelerators in rc
	GnomeStock.

Sun Mar 22 16:04:00 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.[ch]: Added gnome_stock_menu_accel

	* stock_demo.c: Use gnome_stock_menu_accel. Include GnomePropertyBox
	sample.

Sun Mar 22 10:26:09 1998  Radek Doulik  <rodo@aquarius>

	* gnome-propertybox.c (just_close): send delete_event to property
	box instead of widget_destroy

Sun Mar 22 00:07:06 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-propertybox.c (global_apply): Emit apply signal with page
	number of -1 after all pages applied.

Sat Mar 21 00:45:10 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-properties.c (apply_page): New function.
	(gnome_property_configurator_setup): Connect apply_page to "apply"
	signal on property box.
	(gnome_property_configurator_request): Removed.

	* gnome-properties.h (GnomePropertyConfigurator): Replaced
	notebook with property_box.

	* gnome-propertybox.c (gnome_property_box_new): Actually pack
	widgets into frame.
	(gnome_property_box_init): Initalize `items'.
